--- a/Functional/test-output/old/Default suite/methods-alphabetical.html
+++ b/Functional/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70f470">  <td>21/05/04 16:21:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_04_Deposits@3315d2d7]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@262445056</td>   <td></td> </tr>
-<tr bgcolor="9fedbd">  <td>21/05/04 16:21:39</td>   <td>1883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04_Deposits.addDeposit()[pri:0, instance:Test.TC_04_Deposits@3315d2d7]">addDeposit</td> 
-  <td>main@262445056</td>   <td></td> </tr>
-<tr bgcolor="70f470">  <td>21/05/04 16:21:45</td>   <td>7883</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_04_Deposits@3315d2d7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@262445056</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/05/17 09:34:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_05_Delete_Account_Test@1649b0e6]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325144078</td>   <td></td> </tr>
+<tr bgcolor="9fedbd">  <td>21/05/17 09:34:45</td>   <td>1804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_05_Delete_Account_Test.delete_Accnt()[pri:0, instance:Test.TC_05_Delete_Account_Test@1649b0e6]">delete_Accnt</td> 
+  <td>main@1325144078</td>   <td></td> </tr>
+<tr bgcolor="70f470">  <td>21/05/17 09:34:46</td>   <td>3378</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_05_Delete_Account_Test@1649b0e6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1325144078</td>   <td></td> </tr>
 </table>
