--- a/Functional/test-output/old/Suite1/classes.html
+++ b/Functional/test-output/old/Suite1/classes.html
@@ -106,6 +106,36 @@
 <td>tearDown</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>Test.TC_05_Delete_Account_Test</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>delete_Accnt</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>SetUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>Test.TC_01_AddCustomersTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
