--- a/Functional/test-output/old/Suite1/methods-alphabetical.html
+++ b/Functional/test-output/old/Suite1/methods-alphabetical.html
@@ -1,40 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c8dcf">  <td>21/05/04 16:13:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_AddCustomersTest.AddCust()[pri:0, instance:Test.TC_01_AddCustomersTest@7671cb68]">AddCust</td> 
-  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>21/05/04 16:13:53</td>   <td>7700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.LogoVerification()[pri:2, instance:Test.TC_02_LoginTest@49dc7102]">LogoVerification</td> 
-  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/05/04 16:13:44</td>   <td>-1746</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_01_AddCustomersTest@7671cb68]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/05/04 16:13:49</td>   <td>3476</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_02_LoginTest@49dc7102]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/05/04 16:13:56</td>   <td>10373</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@6b8ca3c8]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/05/04 16:14:30</td>   <td>44407</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_04_Deposits@68c72235]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="b2dba3">  <td>21/05/04 16:14:31</td>   <td>45653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04_Deposits.addDeposit()[pri:0, instance:Test.TC_04_Deposits@68c72235]">addDeposit</td> 
-  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>21/05/04 16:13:54</td>   <td>8510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.btnClickable()[pri:3, instance:Test.TC_02_LoginTest@49dc7102]">btnClickable</td> 
-  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>21/05/04 16:13:54</td>   <td>8849</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.display()[pri:4, instance:Test.TC_02_LoginTest@49dc7102]">display</td> 
-  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>21/05/04 16:13:50</td>   <td>4758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.getTitle()[pri:1, instance:Test.TC_02_LoginTest@49dc7102]">getTitle</td> 
-  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>21/05/04 16:13:58</td>   <td>12272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@6b8ca3c8]">loginDDT</td> 
-  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>21/05/04 16:14:07</td>   <td>21668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@6b8ca3c8]">loginDDT</td> 
-  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>21/05/04 16:14:14</td>   <td>28998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@6b8ca3c8]">loginDDT</td> 
-  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>21/05/04 16:14:22</td>   <td>36678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@6b8ca3c8]">loginDDT</td> 
-  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/05/04 16:13:48</td>   <td>2745</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_01_AddCustomersTest@7671cb68]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/05/04 16:13:55</td>   <td>9669</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_02_LoginTest@49dc7102]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/05/04 16:14:29</td>   <td>43728</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_03_LogIn_TestDD@6b8ca3c8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/05/04 16:14:36</td>   <td>50755</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_04_Deposits@68c72235]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1865516976</td>   <td></td> </tr>
+<tr bgcolor="8c8dcf">  <td>21/05/17 20:46:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_AddCustomersTest.AddCust()[pri:0, instance:Test.TC_01_AddCustomersTest@34f7cfd9]">AddCust</td> 
+  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>21/05/17 20:46:45</td>   <td>6169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.LogoVerification()[pri:2, instance:Test.TC_02_LoginTest@65f095f8]">LogoVerification</td> 
+  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="afa968">  <td>21/05/17 20:46:37</td>   <td>-1893</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_01_AddCustomersTest@34f7cfd9]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="afa968">  <td>21/05/17 20:46:42</td>   <td>3541</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_02_LoginTest@65f095f8]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="afa968">  <td>21/05/17 20:46:47</td>   <td>8807</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@59af0466]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="afa968">  <td>21/05/17 20:47:08</td>   <td>29504</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_04_Deposits@3e6ef8ad]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="afa968">  <td>21/05/17 20:47:12</td>   <td>33439</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.SetUp(java.lang.String)[pri:0, instance:Test.TC_05_Delete_Account_Test@346d61be]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="b2dba3">  <td>21/05/17 20:47:09</td>   <td>30758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04_Deposits.addDeposit()[pri:0, instance:Test.TC_04_Deposits@3e6ef8ad]">addDeposit</td> 
+  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>21/05/17 20:46:46</td>   <td>6981</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.btnClickable()[pri:3, instance:Test.TC_02_LoginTest@65f095f8]">btnClickable</td> 
+  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="bc8d9f">  <td>21/05/17 20:47:13</td>   <td>34707</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_05_Delete_Account_Test.delete_Accnt()[pri:0, instance:Test.TC_05_Delete_Account_Test@346d61be]">delete_Accnt</td> 
+  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>21/05/17 20:46:46</td>   <td>7309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.display()[pri:4, instance:Test.TC_02_LoginTest@65f095f8]">display</td> 
+  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="ceadd4">  <td>21/05/17 20:46:43</td>   <td>4894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_LoginTest.getTitle()[pri:1, instance:Test.TC_02_LoginTest@65f095f8]">getTitle</td> 
+  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>21/05/17 20:46:49</td>   <td>10958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@59af0466]">loginDDT</td> 
+  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>21/05/17 20:46:54</td>   <td>15893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@59af0466]">loginDDT</td> 
+  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>21/05/17 20:46:59</td>   <td>20250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@59af0466]">loginDDT</td> 
+  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="aed86c">  <td>21/05/17 20:47:03</td>   <td>24547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_LogIn_TestDD.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:Test.TC_03_LogIn_TestDD@59af0466]">loginDDT</td> 
+  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="afa968">  <td>21/05/17 20:46:41</td>   <td>2856</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_01_AddCustomersTest@34f7cfd9]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="afa968">  <td>21/05/17 20:46:47</td>   <td>8085</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_02_LoginTest@65f095f8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="afa968">  <td>21/05/17 20:47:07</td>   <td>28852</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_03_LogIn_TestDD@59af0466]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="afa968">  <td>21/05/17 20:47:11</td>   <td>32742</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_04_Deposits@3e6ef8ad]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1153302647</td>   <td></td> </tr>
+<tr bgcolor="afa968">  <td>21/05/17 20:47:15</td>   <td>36243</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Test.TC_05_Delete_Account_Test@346d61be]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1153302647</td>   <td></td> </tr>
 </table>
